--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ input::-webkit-inner-spin-button {
   appearance: none;
 }
 
+input,
+textarea,
+label {
+  cursor: none;
+}
+
 img {
   pointer-events: none;
 }
@@ -6182,7 +6188,10 @@ textarea.briefing__input {
   .swiper-button-next.swiper-button-disabled,
   .swiper-button-prev.swiper-button-disabled,
   .projects__prev,
-  .projects__next {
+  .projects__next,
+  input,
+  textarea,
+  label {
     cursor: pointer;
   }
   .team__bottom_heading {
