--- a/css/style.css
+++ b/css/style.css
@@ -5410,6 +5410,7 @@ html.has-scroll-dragging {
 
 .briefing__label {
   min-height: 24px;
+  padding: 0 30px 0 0;
   color: var(--text);
   -webkit-transform: translateY(10px);
   transform: translateY(10px);
