--- a/css/style.css
+++ b/css/style.css
@@ -3563,6 +3563,7 @@ html.has-scroll-dragging {
 }
 
 .expertise__btn {
+  flex: 0 0 auto;
   color: var(--bg);
   background-color: var(--text);
 }
@@ -3625,7 +3626,10 @@ html.has-scroll-dragging {
 .services__desc,
 .briefing__desc,
 .error_page__desc,
-.policy__desc {
+.policy__desc,
+.career_top__desc,
+.career__desc,
+.career_bottom__desc {
   max-width: 430px;
   padding: 0 0 0 40px;
   position: relative;
@@ -3642,7 +3646,10 @@ html.has-scroll-dragging {
 .services__desc::before,
 .briefing__desc::before,
 .error_page__desc::before,
-.policy__desc::before {
+.policy__desc::before,
+.career_top__desc::before,
+.career__desc::before,
+.career_bottom__desc::before {
   content: "";
   display: inline-block;
   width: 2px;
@@ -3928,6 +3935,7 @@ html.has-scroll-dragging {
   display: flex;
   width: 50%;
   padding: 0 0 0 40px;
+  align-items: center;
   justify-content: space-between;
   gap: 40px;
 }
@@ -5854,6 +5862,184 @@ html.has-scroll-dragging {
 
 /* end contact */
 
+/* start career */
+
+.career_top {
+  height: calc(var(--height) - 77px);
+  max-height: 1024px;
+}
+
+.career_top__container {
+  height: 100%;
+}
+
+.career_top__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  padding: 180px 0 100px;
+  gap: 80px;
+}
+
+.career_top__info,
+.career_top__info_block {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.career_top__image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.career_top__image img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  object-fit: cover;
+}
+
+.career_top__image svg {
+  width: 110%;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  z-index: 2;
+  object-fit: contain;
+}
+
+.career_top__image::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: rgba(7, 7, 7, 0.8);
+}
+
+.career_top__head,
+.career_top__desc,
+.career_top__button .button__text {
+  color: var(--white);
+}
+
+.career_top__desc::before {
+  background-color: var(--white);
+}
+
+.career__block {
+  display: flex;
+}
+
+.career__left,
+.career__right {
+  width: 50%;
+  padding: 100px 80px;
+}
+
+.career__right {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.career__info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.career__divider {
+  width: 100%;
+  border-bottom: 1px solid var(--border);
+}
+
+.career__image {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.career__image svg {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+}
+
+.career_bottom__flex {
+  display: flex;
+  padding: 60px 80px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.career_bottom__block .expertise__button {
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+.career_bottom__head {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.career_bottom__desc {
+  text-align: left;
+}
+
+.career_bottom__list {
+  display: flex;
+  padding: 0 80px 40px;
+  justify-content: space-between;
+}
+
+.career_bottom__list ul {
+  width: auto;
+  max-width: 290px;
+  padding: 0;
+}
+
+.career_bottom__list li {
+  display: block;
+}
+
+.career_bottom__button {
+  padding: 0 60px;
+  margin: auto 0 0;
+}
+
+.career_bottom__button span {
+  max-width: 100%;
+  width: 100%;
+  padding: 0;
+}
+
+.career_bottom__button .button__hover {
+  position: absolute;
+}
+
+.career_bottom__list b {
+  color: var(--text);
+}
+
+/* end career */
+
 /* start 1440px */
 @media (max-width: 1919px) {
   .team__bottom_heading {
@@ -6174,6 +6360,14 @@ html.has-scroll-dragging {
   .contacts__social_info {
     padding: 90px 30px;
   }
+  .career__left,
+  .career__right,
+  .career_bottom__flex {
+    padding: 60px;
+  }
+  .career_bottom__list {
+    padding: 0 60px 40px;
+  }
   .footer__list,
   .footer__social {
     gap: 60px;
@@ -6371,7 +6565,10 @@ html.has-scroll-dragging {
   .services__desc,
   .briefing__desc,
   .error_page__desc,
-  .policy__desc {
+  .policy__desc,
+  .career_top__desc,
+  .career__desc,
+  .career_bottom__desc {
     padding: 0 0 0 30px;
   }
   .articles__block,
@@ -6653,6 +6850,17 @@ html.has-scroll-dragging {
   .contacts__social_info_list {
     width: calc(50% - 30px);
   }
+  .career__left,
+  .career__right,
+  .career_bottom__flex {
+    padding: 60px 30px;
+  }
+  .career_bottom__list {
+    padding: 0 30px 40px;
+  }
+  .career_bottom__list ul {
+    padding: 0;
+  }
   .footer__flex {
     padding: 0 0 90px;
     gap: 20px;
@@ -6905,6 +7113,7 @@ html.has-scroll-dragging {
     width: 100%;
   }
   .projects__right {
+    align-items: flex-start;
     flex-direction: column;
     gap: 20px;
   }
@@ -7031,7 +7240,10 @@ html.has-scroll-dragging {
   .services__desc,
   .briefing__desc,
   .error_page__desc,
-  .policy__desc {
+  .policy__desc,
+  .career_top__desc,
+  .career__desc,
+  .career_bottom__desc {
     padding: 0 0 0 20px;
   }
   .expertise__button {
@@ -7170,6 +7382,36 @@ html.has-scroll-dragging {
   }
   .contacts__social_project {
     gap: 30px;
+  }
+  .career_top {
+    height: calc(var(--height) - 67px);
+  }
+  .career__left,
+  .career__right,
+  .career_bottom__flex {
+    padding: 40px 20px;
+  }
+  .career_bottom__list {
+    padding: 0 20px 20px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .career_bottom__list ul {
+    max-width: 100%;
+    padding: 0;
+  }
+  .career_bottom__button {
+    margin: 20px 0 0;
+  }
+  .career__container:nth-last-child(2) .career__block {
+    padding: 30px 20px;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .career__container:nth-last-child(2) .career__left,
+  .career__container:nth-last-child(2) .career__right {
+    width: 100%;
+    padding: 0;
   }
   .footer__flex {
     padding: 0 0 130px;
@@ -7318,7 +7560,10 @@ html.has-scroll-dragging {
   .services__desc,
   .briefing__desc,
   .error_page__desc,
-  .policy__desc {
+  .policy__desc,
+  .career_top__desc,
+  .career__desc,
+  .career_bottom__desc {
     max-width: 100%;
   }
   .digital__head {
@@ -7440,6 +7685,19 @@ html.has-scroll-dragging {
   }
   .contacts__link h3 {
     font-size: 26px;
+  }
+  .career__block {
+    padding: 40px 20px;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .career__container:nth-last-child(2) .career__block {
+    padding: 40px 20px;
+  }
+  .career__left,
+  .career__right {
+    width: 100%;
+    padding: 0;
   }
   .footer__button_up {
     padding: 0;
